--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -56,7 +56,7 @@ const { main }: { main: NavigationLink[] } = menu;
     >
       {
         main.map((menu) => (
-          <fragment>
+          <>
             {menu.hasChildren ? (
               <li class="nav-item nav-dropdown group relative">
                 <span class="nav-link inline-flex items-center">
@@ -82,7 +82,7 @@ const { main }: { main: NavigationLink[] } = menu;
                 </a>
               </li>
             )}
-          </fragment>
+          </>
         ))
       }
     </ul>
@@ -90,6 +90,8 @@ const { main }: { main: NavigationLink[] } = menu;
       <a
         class="cursor-pointer p-2 text-xl text-dark hover:text-primary"
         href="search"
+        title="seach"
+        aria-label="seach"
       >
         <IoSearch />
       </a>
