--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -3,27 +3,30 @@ import { Image } from "@astrojs/image/components";
 import config from "@config/config.json";
 import { getSinglePage } from "@lib/contentParser.astro";
 import dateFormat from "@lib/utils/dateFormat";
-import { humanize, slugify } from "@lib/utils/textConverter";
+import { humanize,slugify } from "@lib/utils/textConverter";
+import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi";
 const authors = await getSinglePage("authors");
 const { summary_length } = config.settings;
 const { className, posts } = Astro.props;
 ---
 
-<div class={`row space-y-16 ${className} `}>
+<div class={`row gy-5 gx-4 ${className} `}>
   {
     posts.map((post: any, i: number) => (
       <div class={i === 0 ? "col-12" : "col-12 sm:col-6"}>
         {post.data.image && (
-          <Image
-            class="rounded-lg"
-            src={post.data.image}
-            alt={post.data.title}
-            width={i === 0 ? 925 : 445}
-            height={i === 0 ? 475 : 230}
-          />
+          <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
+            <Image
+              class="group-hover:scale-[1.03] transition duration-300 w-full"
+              src={post.data.image}
+              alt={post.data.title}
+              width={i === 0 ? 925 : 445}
+              height={i === 0 ? 475 : 230}
+            />
+          </a>
         )}
-        <ul class="mt-4 mb-4 flex flex-wrap items-center space-x-3 text-text">
-          <li>
+        <ul class="mt-6 mb-4 flex flex-wrap items-center text-text">
+          <li class="mr-5">
             {authors
               .filter((author) =>
                 post.data.authors
@@ -33,7 +36,7 @@ const { className, posts } = Astro.props;
               .map((author) => (
                 <a
                   href={`/authors/${slugify(author.data.title)}`}
-                  class="flex items-center hover:text-primary"
+                  class="flex items-center hover:text-primary font-medium"
                 >
                   {author.data.image && (
                     <Image
@@ -48,24 +51,30 @@ const { className, posts } = Astro.props;
                 </a>
               ))}
           </li>
-          <li>{dateFormat(post.data.date)}</li>
-          <li>
-            <ul>
-              {post.data.categories.map((category: string) => (
-                <li class="inline-block">
-                  <a
-                    href={`/categories/${slugify(category)}`}
-                    class="mr-3 hover:text-primary"
-                  >
-                    &#9635; {humanize(category)}
-                  </a>
-                </li>
-              ))}
-            </ul>
+          <li class="mr-5 flex items-center flex-wrap font-medium">
+            <BiCalendarEdit className="mr-2 h-5 w-5 text-gray-600" />
+            <>{dateFormat(post.data.date)}</>
+          </li>
+          <li class="mr-5 flex items-center flex-wrap">
+            <BiCategoryAlt className="mr-2 h-[18px] w-[18px] text-gray-600" />
+            <>
+              <ul>
+                {post.data.categories.map((category: string) => (
+                  <li class="inline-block">
+                    <a
+                      href={`/categories/${slugify(category)}`}
+                      class="mr-3 hover:text-primary font-medium"
+                    >
+                      {humanize(category)}
+                    </a>
+                  </li>
+                ))}
+              </ul>
+            </>
           </li>
         </ul>
-        <h3 class="mb-2">
-          <a href={`/${post.slug}`} class="block hover:text-primary">
+        <h3 class="mb-4">
+          <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
             {post.data.title}
           </a>
         </h3>
