improved typography, hierarchy && updated about & contact page layout

--- a/src/layouts/AuthorSingle.astro
+++ b/src/layouts/AuthorSingle.astro
@@ -24,7 +24,7 @@ const { Content } = await author.render();
           </div>
         )
       }
-      <h1 set:html={markdownify(title)} class="h2 mb-8" />
+      <h1 set:html={markdownify(title)} class="page-heading h2 mb-8" />
 
       <Social source={social} className="social-icons-simple" />
       <div class="content">
