--- a/src/layouts/Authors.astro
+++ b/src/layouts/Authors.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "@astrojs/image/components";
 import { markdownify } from "@lib/utils/textConverter";
+import { BsArrowRightCircle } from "react-icons/bs/index.js";
 const { authors } = Astro.props;
 ---
 
@@ -19,12 +20,15 @@ const { authors } = Astro.props;
             />
           </div>
         )}
-        <h3 class="h4 mb-2">
-          <a href={`/authors/${author.slug}`} class="block hover:text-primary">
+        <h3 class="h4 mt-8 mb-3">
+          <a href={`/authors/${author.slug}`} class="block hover:text-primary transition duration-200">
             {author.data.title}
           </a>
         </h3>
-        <p set:text={markdownify(author.body.slice(0, 120))} />
+        <p class="mb-3" set:text={markdownify(author.body.slice(0, 100))} />
+        <a href={`/authors/${author.slug}`} class="inline-flex items-center text-primary transition duration-200 hover:opacity-70">
+          Read More <BsArrowRightCircle className="inline ml-2" />
+        </a>
       </div>
     ))
   }
