--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -142,7 +142,7 @@ const { title, meta_title, description, image, noindex, canonical } =
   <body>
     <TwSizeIndicator />
     <Header />
-    <main id="main-content">
+    <main id="main-content" class="min-h-[60vh]">
       <slot />
     </main>
     <Footer />
