--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -8,7 +8,7 @@ const { Content } = await data.render();
 
 <section class="section">
   <div class="container">
-    <h1 set:html={markdownify(title)} class="h2 mb-8 text-center" />
+    <h1 set:html={markdownify(title)} class="h2 page-heading" />
     <div class="content">
       <Content />
     </div>
