--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -4,16 +4,16 @@ import config from "@config/config.json";
 import { getSinglePage } from "@lib/contentParser.astro";
 import dateFormat from "@lib/utils/dateFormat";
 import { humanize,slugify } from "@lib/utils/textConverter";
-import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi";
+import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi/index.js";
 const authors = await getSinglePage("authors");
 const { summary_length } = config.settings;
-const { className, posts } = Astro.props;
+const { className, posts, fluid } = Astro.props;
 ---
 
-<div class={`row gy-5 gx-4 ${className} `}>
+<div class={`row gy-5 gx-4 ${className} ${posts.length == 1 ? "justify-center" : ""} `}>
   {
     posts.map((post: any, i: number) => (
-      <div class={i === 0 ? "col-12" : "col-12 sm:col-6"}>
+      <div class={i === 0 && fluid != false ? "col-12" : "col-12 sm:col-6"}>
         {post.data.image && (
           <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
             <Image
@@ -52,20 +52,20 @@ const { className, posts } = Astro.props;
               ))}
           </li>
           <li class="mr-5 flex items-center flex-wrap font-medium">
-            <BiCalendarEdit className="mr-2 h-5 w-5 text-gray-600" />
+            <BiCalendarEdit className="mr-1 h-5 w-5 text-gray-600" />
             <>{dateFormat(post.data.date)}</>
           </li>
           <li class="mr-5 flex items-center flex-wrap">
-            <BiCategoryAlt className="mr-2 h-[18px] w-[18px] text-gray-600" />
+            <BiCategoryAlt className="mr-1 h-[18px] w-[18px] text-gray-600" />
             <>
               <ul>
-                {post.data.categories.map((category: string) => (
+                {post.data.categories.map((category: string, i: number) => (
                   <li class="inline-block">
                     <a
                       href={`/categories/${slugify(category)}`}
-                      class="mr-3 hover:text-primary font-medium"
+                      class="mr-2 hover:text-primary font-medium"
                     >
-                      {humanize(category)}
+                      {humanize(category)}{i !== post.data.categories.length - 1 && ","}
                     </a>
                   </li>
                 ))}
@@ -79,7 +79,7 @@ const { className, posts } = Astro.props;
           </a>
         </h3>
         <p class="text-text">
-          {post.body?.slice(0, Number(summary_length))}...
+          {post.body?.slice(0, Number(i === 0 && fluid != false ? summary_length * 2 : summary_length))}...
         </p>
       </div>
     ))
