--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -4,21 +4,24 @@ import { getTaxonomy } from "@lib/taxonomyParser.astro";
 import { humanize } from "@lib/utils/textConverter";
 
 const categories = await getTaxonomy("posts", "categories");
+
+import { BiCategoryAlt } from "react-icons/bi/index.js";
 ---
 
-<Base title={"categories"}>
+<Base title={"Categories"}>
   <section class="section">
     <div class="container text-center">
-      <h1 class="h2 mb-16">Categories</h1>
+      <h1 class="h2 page-heading">Categories</h1>
       <ul class="space-x-4">
         {
           categories.map((category) => (
             <li class="inline-block">
               <a
                 href={`/categories/${category}`}
-                class="rounded-lg bg-theme-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white"
+                class="rounded-lg bg-theme-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white flex items-center group"
               >
-                &#8226; {humanize(category || "")}
+                <BiCategoryAlt className="mr-1 text-primary group-hover:text-white transition h-6 w-6 scale-75" />
+                <>{humanize(category || "")}</>
               </a>
             </li>
           ))
