--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -4,6 +4,7 @@ import Posts from "@layouts/Posts.astro";
 import { getSinglePage } from "@lib/contentParser.astro";
 import { getTaxonomy } from "@lib/taxonomyParser.astro";
 import taxonomyFilter from "@lib/utils/taxonomyFilter";
+import { humanize } from "@lib/utils/textConverter";
 
 export async function getStaticPaths() {
   const tags = await getTaxonomy("posts", "tags");
@@ -19,15 +20,16 @@ const { tag } = Astro.params;
 
 const posts = await getSinglePage("posts");
 const filterByTags = taxonomyFilter(posts, "tags", tag);
+
+const title = humanize(tag || "");
 ---
 
-<Base title={tag}>
+<Base title={title || "Tag"}>
   <div class="section">
     <div class="container">
-      <h1 class="h2 mb-8 text-center">
-        Showing posts from <span class="text-primary">{tag}</span> tag
-      </h1>
-      <Posts posts={filterByTags} />
+      <p class="text-center mb-4">Showing Posts From</p>
+      <h1 class="h2 mb-16 text-center text-primary">{title}</h1>
+      <Posts posts={filterByTags} fluid={false} />
     </div>
   </div>
 </Base>
