--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,11 +1,19 @@
 // section style
 .section {
-  @apply py-16;
+  @apply py-20;
 }
 
 // container
 .container {
   @apply max-w-[1000px] px-4 md:px-8;
+}
+
+// page heading
+.page-heading {
+  @apply mb-20 text-center font-bold leading-10;
+  &:after {
+    @apply mx-auto mt-4 block h-1 w-10 rounded-full bg-primary content-[''];
+  }
 }
 
 // form style
@@ -38,9 +46,9 @@
   li {
     @apply inline-block;
     a {
-      @apply block h-12 w-12 rounded-lg border border-light bg-transparent text-center text-white transition hover:border-primary hover:bg-primary;
+      @apply block h-11 w-11 rounded-lg border border-light bg-transparent text-center text-white transition hover:border-primary hover:bg-primary;
       svg {
-        @apply m-auto h-12 text-lg;
+        @apply m-auto h-11 text-base;
       }
     }
   }
@@ -60,11 +68,11 @@
 }
 
 .social-share {
-  @apply space-x-2;
+  @apply space-x-1;
   li {
     @apply inline-block;
     a {
-      @apply block p-3 transition hover:text-primary;
+      @apply block p-3 transition transition duration-300 hover:text-primary;
     }
   }
 }
@@ -72,10 +80,15 @@
 // form style
 .form-input,
 .form-textarea {
-  @apply rounded-lg border-border text-text focus:border-primary focus:ring-transparent;
+  @apply rounded-md border-border py-3 text-text focus:border-primary focus:ring-transparent;
 }
 
 // content style
 .content {
-  @apply prose max-w-none prose-headings:font-bold prose-h1:mb-4 prose-h1:text-h1-sm prose-h2:mb-4 prose-h2:mt-4 prose-h2:text-h2-sm prose-h3:mt-4 prose-h3:text-h3-sm prose-h4:mt-4 prose-h5:mb-4 prose-h6:mb-6 prose-blockquote:border-primary prose-blockquote:bg-theme-light prose-blockquote:p-4 md:prose-h1:text-h1 md:prose-h2:text-h2 md:prose-h3:text-h3;
+  @apply prose max-w-none prose-headings:font-bold prose-h1:mb-4 prose-h1:text-h1-sm prose-h2:mb-4 prose-h2:mt-4 prose-h2:text-h2-sm prose-h3:mt-4 prose-h3:text-h3-sm prose-h4:mt-4 prose-h5:mb-4 prose-h6:mb-6 prose-blockquote:rounded-lg prose-blockquote:border-primary prose-blockquote:bg-theme-light prose-blockquote:px-7 prose-blockquote:py-3 prose-blockquote:text-lg prose-blockquote:leading-8 prose-pre:px-6 prose-pre:py-5 md:prose-h1:text-h1 md:prose-h2:text-h2 md:prose-h3:text-h3;
+}
+
+// footer
+footer p a {
+  @apply transition-all duration-200 hover:text-white;
 }
