--- a/src/lib/contentParser.astro
+++ b/src/lib/contentParser.astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 export const getSinglePage = async (collection: any) => {
   const allPage = await getCollection(collection);
   const removeIndex = allPage.filter((data) => data.id.match(/^(?!-)/));
-  const removeDrafts = removeIndex.filter((data) => !data.draft);
+  const removeDrafts = removeIndex.filter((data) => !data.data.draft);
   return removeDrafts;
 };
 ---
