Upgrade Astro to v4 (#1)

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from 'astro:assets';
 import Base from "@layouts/Base.astro";
 import { markdownify } from "@lib/utils/textConverter";
 import { getEntryBySlug } from "astro:content";
@@ -33,7 +33,7 @@ const { title, description, meta_title, image, what_i_do } = entry.data;
         </div>
         <div class="sm:col-7 md:col-8">
           <h1 set:html={markdownify(title)} class="h3 mb-8" />
-    
+
           <div class="content">
             <Content />
           </div>
